# Weeding_robot

./: LICENSE.md  README.md
agri_robot_description/: CMakeLists.txt  package.xml
agri_robot_description/launch/: display.launch.py  gazebo.launch.py
agri_robot_description/meshes/: Base_caster_right.STL  Caster_wheel_left.STL  Caster_wheel_right.STL  Left_wheel.STL  Right_wheel.STL  base_link.STL
agri_robot_description/urdf/: agri_robot.urdf.xacro  camera_control.xacro  depth_camera_control.xacro  gazebo_control.xacro  imu_sensor.xacro  robot_core.xacro  ros2_control.xacro
agri_robot_description/worlds/: crop_field.world  empty.world
crop_row_follower/: package.xml  setup.cfg  setup.py
crop_row_follower/crop_row_follower/: crop_detector.py
dc_motor_demo/: CMakeLists.txt  package.xml
dc_motor_interface/: CMakeLists.txt  diff_drive_robot.cpp  package.xml
dc_motor_interface/include/dc_motor_interface/: diff_drive_robot.hpp  visibility_control.h
delta_robot/: CMakeLists.txt  package.xml
delta_robot/src/: DeltaKInematics.cpp  DeltaKInematics.h  delta_camera.py
diff_robot_hardware/: CMakeLists.txt  diff_drive_robot.cpp  package.xml
diff_robot_hardware/include/diff_robot_hardware/: arduino_comms.hpp  diff_drive_robot.hpp
diffdrive_robot_hardware/: CMakeLists.txt  diff_drive_robot.cpp  diffdrive_robot_hardware.xml  package.xml
diffdrive_robot_hardware/include/diffdrive_robot_hardware/: arduino_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
robot_joystick/: CMakeLists.txt  package.xml
robot_joystick/config/: joystick.yaml
robot_joystick/launch/: joystick.launch.py
robot_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot_navigation/config/: robot_navigation_params.yaml  twist_mux.yaml
robot_navigation/launch/: robot_navigation.launch.py
robot_navigation/robot_navigation/: crop_detector.py  crop_detector_yolov5.py  crop_detector_yolov8.py  crop_follower.py  crop_turning.py  export.py
robot_navigation/robot_navigation/data/: Argoverse.yaml  GlobalWheat2020.yaml  Objects365.yaml  SKU-110K.yaml  VOC.yaml  VisDrone.yaml  coco.yaml  xView.yaml
robot_navigation/robot_navigation/data/scripts/: download_weights.sh
robot_navigation/robot_navigation/models/: common.py  experimental.py  tf.py  yolo.py
robot_navigation/robot_navigation/utils/: __init__.py  augmentations.py  autoanchor.py  autobatch.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
robot_navigation/robot_navigation/utils/loggers/: __init__.py
robot_navigation/robot_navigation/utils/loggers/comet/: __init__.py  hpo.py
robot_navigation/robot_navigation/utils/loggers/wandb/: wandb_utils.py
robot_navigation/robot_navigation/utils/segment/: plots.py
stepper_control/config/: stepper_settings.yaml
stepper_control/scripts/: stepper_driver.py  stepper_ros2_interface.py  test.py  test_2.py
stepper_control/src/: deltaKinematics.c
weeding_robot/: CMakeLists.txt  package.xml
weeding_robot/config/: controller.yaml  robot_sim.rviz  twist_mux.yaml
weeding_robot/launch/: camera.launch.py  delta_camera.launch.py  real_robot.launch.py  robot_simulation.launch.py
